--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "ress": "^3.0.0"
+    "ress": "^3.0.0",
+    "sass": "^1.32.5"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
