--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "ress": "^3.0.0",
-    "sass": "^1.32.5"
+    "sass": "^1.32.5",
+    "three": "^0.124.0"
   },
   "devDependencies": {
     "@types/node": "^14.14.22",
