--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint --ext .js,.jsx,.ts,.tsx --ignore-path .gitignore ."
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
