--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "dayjs": "^1.10.4",
+    "highlight.js": "^10.5.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.5",
     "react": "17.0.1",
